Update about page

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -9,7 +9,7 @@
 <body>
     <div class="main-content">
         {{>header}}
-        <p>About {{name}}</p>
+        <p>This site was created by {{name}}. It uses data from mapbox.com combined with Weatherstack in order to generate an accurate weather forecast for a chosen location.</p>
         <img class="portrait" src="./img/3229528.jpeg">
     </div>
 
